crates/toml/tests/snapshots/invalid/ext/keys/newline-5.stderr
TOML parse error at line 2, column 2
  |
2 | 3
  |  ^
key with no value, expected `=`

---
TOML parse error at line 1, column 6
  |
1 | key =
  |      ^
string values must be quoted, expected literal string
